# copy-paste

./: .env.example  .gitignore  .pre-commit-config.yaml  ARBETSPLAN.md  CHANGELOG.md  Caddyfile.prod_brutal  Caddyfile.prod_brutal.backup  DEBUGGING_RAPPORT.md  DEL_A_PROOF_GRADE_RAPPORT.md  DEL_A_VALIDATION_NOTES.md  DEL_A_VALIDATION_RESULTS.md  DEL_A_VOLUME_MOUNT_ISSUE.md  DRAFT_PRIVACY_CHAIN_IMPLEMENTATION.md  HANG_ANALYSIS.md  LICENSE  LIVETEST_FINAL_RAPPORT.md  LIVETEST_RAPPORT.md  Makefile  PRIVACY_SHIELD_FIX_SUMMARY.md  PRIVACY_SHIELD_LIVE_TEST_RESULTS.md  PROJECT_GUIDE.md  PROJEKTSAMMANFATTNING.md  README.md  README_template.md  REDTEAM_FINAL.md  REDTEAM_FINAL_RESULTS.md  REDTEAM_RAPPORT.md  REDTEAM_TEST_RESULTS.md  SAMMANFATTNING_TESTRESULTAT.md  START.md  TEST_INSTRUCTIONS_PRIVACY_V2.md  TEST_RAPPORT.md  TEST_RESULTS_CONSOLE_ENDPOINTS.md  agent.md  core.md  docker-compose.prod_brutal.yml  docker-compose.yml  frontend.md  projektplan.md  pyproject.toml  (+12 more)
.github/: dependabot.yml  pull_request_template.md
alembic/: env.py
archive/: README.md
arkiv/: ARLIG_UTVARDERING.md  DEBUG_ANALYS.md  Makefile  README.md  SAMMANFATTNING.md  SCOUT_PLAN.md  TEST_INSTRUCTIONS.md  uvärdering.md
backend/: Dockerfile  pytest.ini  requirements-dev.txt  requirements.txt  test_import_debug.py  test_import_step_by_step.py  test_imports.py
deploy/: Caddyfile  README_DEPLOY.md  compose.prod.yml
docs/: AGENT_CONSTITUTION_REFERENCE.md  AGENT_SUPERPROMPT.md  ARCHITECTURE.md  ASVS_MAPPING.md  COLD_START_REHEARSAL.md  DEBUG_STATUS.md  DEL_A_CRITICAL_VALIDATION.md  DEMO_SCRIPT.md  (+46 more)
(+393 files in other folders)
